# homesweethome

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
activites/: apps.py  forms.py  models.py  services.py  urls.py  views.py
activites/migrations/: 0001_initial.py
activites/tests/: factories.py  test_models.py  test_services.py  test_smoke.py  test_urls.py  test_views.py
comptes/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
comptes/migrations/: 0001_initial.py
comptes/tests/: factories.py  test_models.py  test_smoke.py  test_views.py
config/: celery.py  health.py  middleware.py  urls.py
config/settings/: base.py  dev.py  prod.py  test.py
config/tests/: test_health.py
evaluations/: apps.py  forms.py  models.py  services.py  urls.py  views.py
evaluations/migrations/: 0001_initial.py
evaluations/tests/: factories.py  test_models.py  test_services.py  test_smoke.py  test_urls.py  test_views.py
foyer/: admin.py  apps.py  context_processors.py  forms.py  models.py  services.py  signals.py  tasks.py  urls.py  views.py
foyer/migrations/: 0001_initial.py  0002_invitation_and_foyer_cree_par_nullable.py  (+3 more)
notes/: context_processors.py  forms.py  models.py  services.py  urls.py  views.py
planification/: apps.py  forms.py  models.py  services.py  urls.py  views.py
requirements/: base.txt  dev.txt
templates/: app_base.html  base.html  home.html
(+66 files in other folders)
